--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,8 +3,7 @@
   "env": {
     "browser": false,
     "node": true,
-    "es2021": true,
-    "jest": true
+    "es2021": true
   },
   "extends": [
     "plugin:@typescript-eslint/recommended",
