--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     image: postgres:alpine
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: "@postgres22"
+      POSTGRES_PASSWORD: "postgres22"
     ports:
-      - "15432:5432"
+      - "5432:5432"
     networks:
       - postgres-compose-network
       
@@ -17,7 +17,7 @@ services:
     image: dpage/pgadmin4
     environment:
       PGADMIN_DEFAULT_EMAIL: "email@loomi.com.br"
-      PGADMIN_DEFAULT_PASSWORD: "@pgAdmin22"
+      PGADMIN_DEFAULT_PASSWORD: "pgAdmin22"
     ports:
       - "16543:80"
     depends_on:
