--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node .",
-    "compose:up": "(docker compose up -d)",
+    "compose:up": "(docker compose up -d --build)",
     "compose:down": "(docker compose down --remove-orphans)",
     "lint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
     "dev": "ts-node-dev ./src/server.ts"
