--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "@prisma/client": "^3.12.0",
     "camelcase": "6.3.0",
     "dotenv": "10.0.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "joi": "^17.6.0"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
