--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
   },
   "dependencies": {
     "@prisma/client": "^3.12.0",
+    "@types/multer": "^1.4.7",
     "camelcase": "6.3.0",
     "dotenv": "10.0.0",
     "express": "^4.17.3",
-    "joi": "^17.6.0"
+    "joi": "^17.6.0",
+    "multer": "^1.4.4"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
