--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/express": "4.17.13",
     "@types/mocha": "9.1.0",
     "@types/node": "16.11.7",
+    "@types/nodemailer": "^6.4.4",
     "@types/sinon": "10.0.11",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
@@ -45,7 +46,8 @@
     "dotenv": "10.0.0",
     "express": "^4.17.3",
     "joi": "^17.6.0",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "nodemailer": "^6.7.3"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
