--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/chai": "4.3.0",
     "@types/chai-http": "4.2.0",
     "@types/express": "4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/mocha": "9.1.0",
     "@types/node": "16.11.7",
     "@types/nodemailer": "^6.4.4",
@@ -46,6 +47,7 @@
     "dotenv": "10.0.0",
     "express": "^4.17.3",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.3"
   },
